# tqsdk_broker_connect

./: .dockerignore  .gitignore  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md
scripts/: capture_tqsdk_data.py
scripts/capture_tqsdk_data/: main.py
scripts/deploy/: Dockerfile  Dockerfile.account_handler  Dockerfile.account_monitor  Dockerfile.base  Dockerfile.cloud  Dockerfile.local  Dockerfile.order_canceller  Dockerfile.order_handler  Dockerfile.order_monitor  Dockerfile.order_submitter  Dockerfile.position_handler  Dockerfile.position_monitor  build_all_images.sh  build_image_new.sh  build_img.sh  deploy_config.sh  push_to_acr.sh
scripts/entry/: capture_tqsdk_data.sh
scripts/update_init_pos/: main.py  run.sh  sync.sh  sync_to_aliyun.py
services/tq_account_handler/: __init__.py  main.py  redis_writer.py
services/tq_account_monitor/: __init__.py  main.py  monitor.py  publisher.py
services/tq_order_canceller/: __init__.py  executor.py  main.py  worker.py
services/tq_order_handler/: __init__.py  consumer.py  main.py  postgres_writer.py
services/tq_order_monitor/: __init__.py  main.py  monitor.py  publisher.py
services/tq_order_submitter/: __init__.py  closetoday_splitter.py  consumer.py  executor.py  (+3 more)
shared/: __init__.py  aiopika_tqapi_base.py  config.py  constants.py  models.py  product_universe.py  rabbitmq_client.py  redis_client.py  tqapi_factory.py
tests/: demo_aiopika_tqapi_integration.py  mq_mock_messages.py
tqsdk_client/: __init__.py  config.py  connection_checker.py  data_processor.py  order_executor.py  tq_data_stream.py
(+25 files in other folders)
